--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="250sp"
+        android:layout_height="200sp"
         android:columnWidth="100sp"
         android:numColumns="auto_fit"
         android:stretchMode="spacingWidthUniform"
@@ -19,13 +19,12 @@
         />
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="210sp"
-        android:layout_below="@+id/lettersGrid"
-        >
-
+        android:layout_height="260sp"
+        android:layout_below="@+id/lettersGrid">
     </ListView>
 
     <TextView
+        android:id="@+id/enteredLetters"
         android:layout_width="match_parent"
         android:layout_height="40sp"
         android:layout_alignParentBottom="true"
