--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,21 +18,40 @@
         android:layout_alignParentTop="true"
         />
     <ListView
+        android:id="@+id/completedWordList"
         android:layout_width="match_parent"
-        android:layout_height="260sp"
-        android:layout_below="@+id/lettersGrid">
+        android:layout_height="210sp"
+        android:layout_below="@+id/lettersGrid"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
     </ListView>
 
     <TextView
         android:id="@+id/enteredLetters"
         android:layout_width="match_parent"
         android:layout_height="40sp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/completedWordList"
         android:gravity="center_horizontal"
         android:text="your word here"
         android:textSize="20sp"
         android:textAllCaps="true"
         />
+    <Button
+        android:id="@+id/wordSubmit"
+        android:layout_width="193sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Submit" />
+    <Button
+        android:id="@+id/wordClear"
+        android:layout_width="193sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:text="Clear" />
 
 
 
