--- a/app/src/main/res/layout/letter_grid.xml
+++ b/app/src/main/res/layout/letter_grid.xml
@@ -11,6 +11,7 @@
         android:layout_weight="0.02"
         android:gravity="center_horizontal"
         android:text="A"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textColor="@color/colorAccent"/>
 
 </LinearLayout>
